--- a/public/index.html
+++ b/public/index.html
@@ -16,12 +16,12 @@
     -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
   
-
-    <head>
-      <link
-        rel="stylesheet"
-        href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css"
-      />
+    <link
+    rel="stylesheet"
+    href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap"
+  />
+  
+    
     </head>
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
